# TP-FINAL-TALLER-1

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Makefile  Manual Tecnico.md  Manual de Proyecto.md  Manual del Usuario.md  README.md  TODO.md  config.yaml  config.yml  config_usado_para_correcion.yml  correcciones.md  socket.h
client_src/: Client.cpp  client.h  client_main.cpp  client_protocol.cpp  client_protocol.h  client_reader.cpp  client_reader.h  filehandler.cpp  filehandler.h
common_src/: armas.cpp  armas.h  bullet.cpp  bullet.h  client_protocol.cpp  client_protocol.h  game_config.cpp  game_config.h  game_entity.cpp  game_entity.h  granadas.cpp  granadas.h  matchstate.h  math_helper.h  observable_property.h  physics_manager.cpp  physics_manager.h  player_state.cpp  player_state.h  protected_vector.h  protocol.cpp  protocol.h  protocol_types.h  queue.h  serialization.h  serializer.cpp  server_protocol.cpp  server_protocol.h  socket.cpp  socket.h  statemachine.cpp  statemachine.h  thread.h  utils.cpp  utils.h  zombie.cpp  zombie.h
common_src/client/: button.cpp  button.h  client_asset.cpp  client_asset.h  client_asset_manager.cpp  client_asset_manager.h  client_image.cpp  client_image.h  client_lobby.cpp  client_lobby.h  client_main.cpp  client_protocol.cpp  client_protocol.h  client_receiver.cpp  client_receiver.h  client_renderer.cpp  client_renderer.h  client_sender.cpp  client_sender.h  gameoption.cpp  idle_intention.cpp  idle_intention.h  intention.cpp  intention.h  lobby.cpp  mainmenu.cpp  mainmenu.h  moving_intention.cpp  moving_intention.h  numberplayers.cpp  prepare_grenade_intention.cpp  prepare_grenade_intention.h  reload_intention.cpp  reload_intention.h  shooting_intention.cpp  shooting_intention.h  stop_moving_intention.cpp  stop_moving_intention.h  throw_grenade_intention.cpp  throw_grenade_intention.h
common_src/network/: receiver.h  sender.h
common_src/server/: accepter.cpp  accepter.h  armas.cpp  armas.h  client.cpp  client.h  game.cpp  game.h  gamehandler.cpp  gamehandler.h  server.cpp  server.h  server_main.cpp  server_protocol.cpp  server_protocol.h
diagrams/: client_press_button.plantuml  game_loop.plantuml  server_handle_request.plantuml
include/: GameOption.h  Lobby.h  numberPlayers.h
qt/: GameOption.h  GameOption.ui  JoinGame.h  JoinGame.ui  Lobby.h  Lobby.ui  MainWindow.h  NumberPlayers.h  NumberPlayers.ui  WaitingRoom.ui  gameoption.cpp  joinGame.h  joingame.cpp  lobby.cpp  lobby_command.h  mainwindow.cpp  mainwindow.h  numberPlayers.h  numberplayers.cpp  numberplayers.ui  waitingroom.cpp  waitingroom.h
resources/: server_protocol.cpp
server_src/: accepter.cpp  accepter.h  client.cpp  client.h  client_receiver.cpp  client_receiver.h  client_sender.cpp  client_sender.h  game.cpp  game.h  gamehandler.cpp  gamehandler.h  matchstate.h  player.cpp  player.h  protected_list.cpp  protected_list.h  queue.h  server.cpp  server.h  server_main.cpp  server_protocol.cpp  server_protocol.h
tests/: test_collisions.cpp  test_game_config.cpp  test_protocol.cpp
ui/: gameoption.ui  joingame.ui  lobby.ui  numberplayers.ui
valgrind/: client.supp
valgrind_logs/: server_multiple_matches.txt
